<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainui.makebooking.householdservices.tabs.SelectServiceFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/continue_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/how_works_header"
                    style="@style/TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/how_it_works"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3" />

                <TextView
                    android:id="@+id/how_works_header2"
                    style="@style/TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/select_services"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider5" />

                <ImageView
                    android:id="@+id/working_one_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/content_dsc_step_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/how_works_header"
                    app:srcCompat="@drawable/ic_working_one" />

                <TextView
                    android:id="@+id/working_one_title_text"
                    style="@style/TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/select_service_header"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/working_one_image"
                    app:layout_constraintStart_toEndOf="@+id/working_one_image"
                    app:layout_constraintTop_toTopOf="@+id/working_one_image" />

                <TextView
                    android:id="@+id/working_one_expl_text"
                    style="@style/TextSubHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="start"
                    android:text="@string/select_service_explanation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/working_one_image"
                    app:layout_constraintTop_toBottomOf="@+id/working_one_title_text" />

                <ImageView
                    android:id="@+id/working_two_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/content_dsc_step_two"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/working_one_expl_text"
                    app:srcCompat="@drawable/ic_working_two" />

                <TextView
                    android:id="@+id/working_two_title_text"
                    style="@style/TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/choose_time_title"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/working_two_image"
                    app:layout_constraintStart_toEndOf="@+id/working_two_image"
                    app:layout_constraintTop_toTopOf="@+id/working_two_image" />

                <TextView
                    android:id="@+id/working_two_expl_text"
                    style="@style/TextSubHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="start"
                    android:text="@string/choose_time_explanation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/working_two_image"
                    app:layout_constraintTop_toBottomOf="@+id/working_two_title_text" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="3dp"
                    android:layout_height="0dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintBottom_toTopOf="@+id/working_two_image"
                    app:layout_constraintEnd_toEndOf="@+id/working_one_image"
                    app:layout_constraintStart_toStartOf="@+id/working_one_image"
                    app:layout_constraintTop_toBottomOf="@+id/working_one_image" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="3dp"
                    android:layout_height="0dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintBottom_toTopOf="@+id/working_three_image"
                    app:layout_constraintEnd_toEndOf="@+id/working_two_image"
                    app:layout_constraintStart_toStartOf="@+id/working_two_image"
                    app:layout_constraintTop_toBottomOf="@+id/working_two_image" />

                <ImageView
                    android:id="@+id/working_three_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/content_dsc_step_three"
                    app:layout_constraintEnd_toEndOf="@+id/working_two_image"
                    app:layout_constraintStart_toStartOf="@+id/working_two_image"
                    app:layout_constraintTop_toBottomOf="@+id/working_two_expl_text"
                    app:srcCompat="@drawable/ic_working_three" />

                <TextView
                    android:id="@+id/working_three_title_text"
                    style="@style/TextHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/hassle_free_service_title"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/working_three_image"
                    app:layout_constraintStart_toEndOf="@+id/working_three_image"
                    app:layout_constraintTop_toTopOf="@+id/working_three_image" />

                <TextView
                    android:id="@+id/working_three_expl_text"
                    style="@style/TextSubHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="start"
                    android:text="@string/hassle_free_service_explanation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/working_three_image"
                    app:layout_constraintTop_toBottomOf="@+id/working_three_title_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/select_services_recycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/how_works_header2"
                    app:layout_constraintVertical_bias="0.0"
                    tools:listitem="@layout/list_item_service_or_package" />

                <View
                    android:id="@+id/divider6"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorFragmentBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/select_services_recycler" />

                <TextView
                    android:id="@+id/select_packages_text"
                    style="@style/TextHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/select_packages"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/select_packages_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/select_packages_text"
                    tools:listitem="@layout/list_item_service_or_package" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:background="@color/colorFragmentBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorFragmentBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/working_three_expl_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorBlack"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/text_continue"
            app:backgroundTint="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>